src/_desktop.scss
@use './index.scss' as global;
@use './mixins.scss' as mixins;

@mixin home-page-desktop(){
    @include mixins.desktop {
        .mobile {
            display: none;
            visibility: hidden;
        }
        .desktop {
            display: block;
            visibility: visible;
        }
        .section.title {
            h1 {
                grid-row: 3 / span 10;
                font-size: 8rem;
            }
            .furniture {
                grid-row: 2;
            }
            .img {
                grid-column: 1 / span 6;
                grid-row: 3 / span 11;
            }
            .caption {
                grid-row: 8 / span 2;
                grid-column: 7 / span 4;
                justify-self: center;
                margin: 0;
                font-size: 2rem;
                text-wrap: balance;
                align-self: center;
            }
        }
        .section.intro {
            blockquote {
                font-size: 3rem;
                grid-column: 2/12;
            }
        }
        .section.experiment {
            grid-row: span 13;
            .titled-paragraph {
                grid-column: 7 / span 5;
                grid-row: 2 / span 6;
                h2 {
                    grid-column: 1 /2;
                }
                .paragraphs {
                    grid-column: 2/6;
                }
            }
            img {
                width: 100%;
                max-width: unset;
            }
            img:nth-of-type(1){
                grid-row: 2 / span 4;
                grid-column: 1 / span 2;
                object-fit: cover;
            }
            img:nth-of-type(2){
                grid-row: 4 / span 4;
                grid-column: 2 / span 4;
            }
            img:nth-of-type(3){
                grid-row: 4 / span 1;
                grid-column: 6 / span 1;
            }
            img:nth-of-type(4){
                grid-row: 10 / span 1;
                grid-column: 9 / span 1;
                z-index: 1;
            }
            img:nth-of-type(5){
                grid-row: 9 / span 3;
                grid-column: 1 / span 2;
                z-index: -1;
                object-fit: cover;
                height: 100%;
            }
            img:nth-of-type(6){
                grid-row: 13 / span 3;
                grid-column: -5 / span 2;
            }
            img:nth-of-type(7){
                grid-row: 7 / span 2;
                grid-column: 2 / span 2;
            }
            img:nth-of-type(8){
                grid-row: 7 / span 1;
                grid-column: 6 / span 1;
                max-width: unset;
            }
            img:nth-of-type(9){
                grid-row: 9 / span 2;
                grid-column: 4 / span 2;
                z-index: 1;
            }
            img:nth-of-type(10){
                grid-row: 10 / span 2;
                grid-column: -4 / span 2;
            }
            img:nth-of-type(11){
                grid-row: 12 / span 1;
                grid-column: 5 / span 1;
            }
            img:nth-of-type(12){
                grid-row: 8 / span 2;
                grid-column: -1 / span 1;
                z-index: -1;
                object-fit: cover;
                height: 100%;
            }
            img:nth-of-type(13){
                grid-row: 11 / span 3;
                grid-column: 3 / span 2;
            }
            img:nth-of-type(14){
                grid-row: 10 / span 4;
                grid-column: 6 / span 3;
            }
            img:nth-of-type(15){
                grid-row: 9 / span 2;
                grid-column: -7 / span 2;
            }
            img:nth-of-type(16){
                grid-row: 13 / span 1;
                grid-column: -8 / span 1;
            }
            img:nth-of-type(17){
                grid-row: 12/ span 3;
                grid-column: -3 / span 2;
            }
        }
    }
    @media screen and (min-width: 1728px){
        .section.title {
            h1 {
                font-size: 12.5625rem;
                line-height: 100%;
            }
            .caption {
                grid-row: 8 / span 3;
            }
        }
        .section.intro {
            blockquote {
                font-size: 4.75rem;
                grid-column: 2/12;
                line-height: 100%;
            }
        }
        .section.experiment {
            grid-row: span 14;
            .titled-paragraph {
                grid-column: 8 / span 5;
                grid-row: 2 / span 6;
                h2 {
                    grid-column: 1 /2;
                }
                .paragraphs {
                    grid-column: 2/6;
                }
            }
            img:nth-of-type(2){
                grid-column: 3 / span 3;
            }
            img:nth-of-type(3){
                grid-row: 5 / span 1;
            }
            img:nth-of-type(8){
                grid-row: 6 / span 1;
                grid-column: 7 / span 1;
            }
            img:nth-of-type(9){
                grid-row: 8 / span 2;
                grid-column: 5 / span 2;
            }
            img:nth-of-type(10){
                grid-row: 11 / span 1;
                grid-column: -3 / span 1;
                z-index: 1;
            }
            img:nth-of-type(11){
                grid-row: 13 / span 1;
            }
            img:nth-of-type(14){
                grid-row: 9 / span 4;
            }
            img:nth-of-type(15){
                grid-row: 9 / span 2;
                grid-column: -5 / span 2;
            }
            img:nth-of-type(16){
                grid-row: 14 / span 1;
            }
        }
    }
}

